# Ort

./: .clang-format  .gitignore  CMakeLists.txt  code.ess  main.cpp  run.sh  token.json
ast/: expression_statement.h  header.h  infix.h  integer.h  node.cpp  node.h  program.h
lexer/: lexer.cpp  lexer.h
parser/: parser.cpp  parser.h
token/: token.cpp  token.h
